<resources>
    <string name="app_name">Food Planner Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="plan">Plan</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="splash">Splash</string>
    <string name="meal_details">Meal Details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="sign_up">Sign Up</string>
    <string name="categories">Categories</string>
    <string name="swipe">Swipe Right ></string>
    <string name="continue_str">Continue</string>
    <string name="onboard">Onboard</string>
    <string name="skip">Skip</string>
    <string name="as_a_guest">as a Guest</string>
    <string name="confirm_your_password">confirm your password</string>
    <string name="create_your_free_account">Create your free account</string>
    <string name="email">Email</string>
    <string name="enter_your_email">enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_a_valid_mail">enter a valid mail</string>
    <string name="required">required</string>
    <string name="passwords_do_not_match">passwords do not match</string>
    <string name="i_already_have_an_account">I already have an account.</string>
    <string name="i_do_not_have_an_account">I do not have an account.</string>
    <string name="password_must_contain_at_least_one_capital_letter">password must contain at least one capital letter</string>
    <string name="password_must_contain_at_least_one_digit">password must contain at least one digit</string>
    <string name="special_characters_are_not_allowed_in_the_password">special characters are not allowed in the password</string>
    <string name="password_must_be_at_least_8_characters_long">password must be at least 8 characters long</string>
    <string name="check_your_internet_connection_and_try_again">Check your internet connection and try again.</string>
    <string name="the_email_address_is_already_in_use_by_another_account">The email address is already in use by another account.</string>
    <string name="please_enter_a_valid_username_and_password">Please enter a valid username and password.</string>
    <string name="an_unknown_error_occurred">An unknown error occurred.</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="meals_by_category">Meals by Category</string>
    <string name="meals_by_country">Meals by Country</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="select_date_of_meal">Select date of meal:</string>
    <string name="day_month">Day, -- Month ----</string>
    <string name="info">Info</string>
    <string name="instructions">Instructions</string>
    <string name="in_order_to_be_able_to_use_this_feature_you_must_log_in_first">In order to be able to use this feature, you must log in first.</string>
    <string name="hello_there_nwelcome_back">Hello there !\nWelcome Back</string>
    <string name="backup">Backup</string>
    <string name="login_with_google">Login with Google</string>
</resources>