<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.giraffe.foodplannerapplication.features.categories.view.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.giraffe.foodplannerapplication.features.details.view.DetailsFragment"
        android:label="@string/meal_details"
        tools:layout="@layout/fragment_details" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.giraffe.foodplannerapplication.features.editprofile.view.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.giraffe.foodplannerapplication.features.favorites.view.FavoritesFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.giraffe.foodplannerapplication.features.home.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/planFragment"
        android:name="com.giraffe.foodplannerapplication.features.plan.view.PlanFragment"
        android:label="@string/plan"
        tools:layout="@layout/fragment_plan" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.giraffe.foodplannerapplication.features.search.view.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.giraffe.foodplannerapplication.features.settings.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>